LIPS-324 [Client Issue] - Buttons are not aligned properly

--- a/src/assets/sass/custom/_devp.scss
+++ b/src/assets/sass/custom/_devp.scss
@@ -825,6 +825,11 @@ span.countBadge {
     left: 0;
     right: 0;
     width: 100%;
+    margin-top: 100px !important;
+    display: block;
+  }
+  .view_more_button{
+    margin-bottom: 100px !important;
   }
 }
 
